# diploma

./: .gitignore  2026-05-14-sar-area-selection-quality-analysis.ipynb  Makefile  README.md  pyproject.toml  requirements.txt
image_server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
image_server/app/: __init__.py  catalog.py  config.py  main.py  thumbnails.py
legacy/programm/: BUILD_README.md  Makefile  __init__.py  build.sh  controller.py  main_interface.py  model.py  new_controller.py  run_new_interface.py  setup.py  test_ai_denoising.py  test_enhancement.py  test_interface.py  test_sar_enhancement.py  view.py
legacy/programm/sar_gate_yolo/: cfar.py  (+5 more)
main/: __init__.py
main/algorythms/: __init__.py
main/interface/: __init__.py  demo_interface.py  enhanced_components.py  integration_bridge.py  launch_integrated.py  main_interface.py  new_controller.py  pipeline_wizard.py  remote_client.py  run_interface.py  view.py
main/tests/: __init__.py  test_ai_denoising.py  test_enhancement.py  test_interface.py  test_sar_enhancement.py  test_yolov11_inference.py
models/denoising/: simple_dncnn.pth
programm/: .gitignore  README.md  demo_interface.py  enhanced_components.py  integration_bridge.py  launch_integrated.py  main_interface.py  new_controller.py  requirements.txt  setup.py  view.py
programm/sar_aircraft_data/: README.md  download_sadd.py  organize_sadd.py
programm/sar_gate_yolo/: cli.py  config.yaml  crops.py  mini_net.py  nms.py  yolo_runner.py
satellite_image_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+26 files in other folders)
